<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="30dp"
    android:paddingHorizontal="10dp"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="PRODUCTIVIDAD CAMION MINERO"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/spinnerMaquinaria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldEficiencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eficiencia"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEficiencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinnerTiempoCicloBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSumatoriaFactor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Factor Externo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldCapacidadCucharon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="q -Capacidad Cucharon"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCapacidadCucharon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>



        <Spinner
            android:id="@+id/spinnerPesoMateriales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinnerPesoMaterialesOpcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




        <Spinner
            android:id="@+id/spinnerTiempoDescarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerTiempoPosicionamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTramoA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tramoa"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTramoA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTramoB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tramob"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTramoB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTramoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tramoc"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTramoC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTramoD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tramod"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTramoD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTramoAR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tramoar"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTramoAR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTramoBR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tramobr"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTramoBR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTramoCR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tramocr"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTramoCR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldTramoDR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tramodr"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTramoDR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_spinner1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_spinner2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

            </LinearLayout>


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calcular" />


        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/myTableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </HorizontalScrollView>


    </LinearLayout>


</ScrollView>